style.css
@font-face {
    font-family: "Rubber-Biscuit";
    src: url(connection.woff);
}
body {
    background-color: aquamarine;
    background: url(images/ice.jpg);
    background-repeat: no-repeat;
    background-size: 1600px; 
    font-family: "Rubber-Biscuit"
}
h1{
    text-align: center;
}
#timer{
    font-size: 80px;
    text-align: center;
}
div.container{
    position: fixed;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
}
#sailor-cat{
    width: 250px;
}
#start{
   background-color: rgb(174, 181, 209);
}
#pause{
    background-color: rgb(122,130,148);
}
#pause,
#start{
    border: none;
    color: black;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 16px;
    font-family: "Rubber-Biscuit";

}
.buttons{
    margin: 3em;
}

